lang.java.statics.test/tests/positive/classes/nested/inner-class-instantiation-unqualified-in-enclosing-class.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public B b = new B();
    public class B {}
}
