lang.java.statics.test/tests/negative/packages/single-type-import-shadows-class-in-same-package.no.javtest
STATIX fail java\.subtype\.sub-type
JAVAC  fail incompatible types\: p\.B cannot be converted to q\.B

[p] {

    [A]
    package p;
    import q.B;
    public class A {
        public B b = (p.B) null;
    }

    [B]
    package p;
    public class B {}

}

[q] {

    [B]
    package q;
    public class B {}

}
